--- a/blog.html
+++ b/blog.html
@@ -1,45 +1,95 @@
-<!doctype html>
-<head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156828014-2"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+<!DOCTYPE html>
+<html>
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-156828014-2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-        gtag('config', 'UA-156828014-2');
-        </script>
+      gtag("config", "UA-156828014-2");
+    </script>
 
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Blorg</title>
-</head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Blorg</title>
+  </head>
 
-
-
-<body>
-        <div id="container">
-                <div style="position: fixed; top: 30px; left: 50%; transform: translate(-50%, -50%);">
-                <h1>blorg</h1>
-                        </div>
-                <div id="inner" style="text-align: start;">
-                <ul>
-                        <li class="blog"><i>04.10.23</i> | <a href="blogs/robo-boys.html"><b>🤖 Replacing my best friends with an LLM trained on 500,000 group chat messages</b></a></li>
-                        <li class="blog"><i>07.20.22</i> | <a href="blogs/halfway-there.html"><b>🗺️ Halfway There</b></a></li>
-                        <li class="blog"><i>09.16.21</i> | <a href="blogs/horoscope-sep.html"><b>🔮 September Hex Horoscope</b></a></li>
-                        <li class="blog"><i>08.31.21</i> | <a href="https://towardsdatascience.com/data-applications-for-analytics-817d4761211c"><b>📊 Data Applications</b> [external]</a></li>
-                        <li class="blog"><i>08.11.21</i> | <a href="blogs/horoscope-aug.html"><b>🔮 August Hex Horoscope</b></a></li>
-                        <li class="blog"><i>02.19.19</i> | <a href="https://medium.com/@isidoredmiller/four-things-tropical-trees-taught-me-about-troubleshooting-sql-d75c75676128"><b>🌳 Four Things Tropical Trees Taught Me About Troubleshooting SQL</b> [external]</a></li>
-                </ul>
-
-        </div>
-<div class="footer"><b><a href="https://izzy.co">home</a></b>
-</div>
-
-</div>
-
-
-
-
-</body></html>
+  <body>
+    <div id="container">
+      <div
+        style="
+          position: fixed;
+          top: 30px;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        "
+      >
+        <h1>blorg</h1>
+      </div>
+      <div id="inner" style="text-align: start">
+        <ul>
+          <li class="blog">
+            <i>04.10.23</i> |
+            <a href="blogs/a-glitch-in-the-seo-matrix.html"
+              ><b>😎 A glitch in the SEO matrix</b></a
+            >
+          </li>
+          <li class="blog">
+            <i>04.10.23</i> |
+            <a href="blogs/robo-boys.html"
+              ><b
+                >🤖 Replacing my best friends with an LLM trained on 500,000
+                group chat messages</b
+              ></a
+            >
+          </li>
+          <li class="blog">
+            <i>07.20.22</i> |
+            <a href="blogs/halfway-there.html"><b>🗺️ Halfway There</b></a>
+          </li>
+          <li class="blog">
+            <i>09.16.21</i> |
+            <a href="blogs/horoscope-sep.html"
+              ><b>🔮 September Hex Horoscope</b></a
+            >
+          </li>
+          <li class="blog">
+            <i>08.31.21</i> |
+            <a
+              href="https://towardsdatascience.com/data-applications-for-analytics-817d4761211c"
+              ><b>📊 Data Applications</b> [external]</a
+            >
+          </li>
+          <li class="blog">
+            <i>08.11.21</i> |
+            <a href="blogs/horoscope-aug.html"
+              ><b>🔮 August Hex Horoscope</b></a
+            >
+          </li>
+          <li class="blog">
+            <i>02.19.19</i> |
+            <a
+              href="https://medium.com/@isidoredmiller/four-things-tropical-trees-taught-me-about-troubleshooting-sql-d75c75676128"
+              ><b
+                >🌳 Four Things Tropical Trees Taught Me About Troubleshooting
+                SQL</b
+              >
+              [external]</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="footer">
+        <b><a href="https://izzy.co">home</a></b>
+      </div>
+    </div>
+  </body>
+</html>
