--- a/blogs/a-glitch-in-the-seo-matrix.html
+++ b/blogs/a-glitch-in-the-seo-matrix.html
@@ -70,12 +70,12 @@
       </div>
       <center>
         <div class="maintext">
-          <aside>
+          <!-- <aside>
             If you're a Cisco IoT student looking for the answer to your
             question: “A comprehensive ecosystem of open-source software for big
             data management” is Hadoop, not cloud computing. You probably aren't
             interested in the rest of this post. Good luck studying!
-          </aside>
+          </aside> -->
 
           <p>
             Last week, I found a glitch in the matrix of SEO. For some reason,
@@ -89,11 +89,19 @@
           <img-caption>Data from SEMRush</img-caption>
 
           <p>
-            And there are <strong>83 million</strong> Google search results for
-            the query, “A comprehensive ecosystem of open-source software for
-            big data management”, 800 of which mention the phrase in complete
-            form. Most of these 800 are very thin AI generated blogs just
-            published in the last couple of months.
+            And weirdly, there are ~1,000 results for the exact query “A
+            comprehensive ecosystem of open-source software for big data
+            management”. This is at once a weirdly small and weirdly large
+            number— small because most Google searches have tens of millions of
+            results, but large because most Google searches for exact string
+            matches of that length actually turn up few, or no results. So
+            there's something to this phrase.
+          </p>
+
+          <p>
+            Looking at the results, it's immediately obvious that most of these
+            are very thin AI generated blogs just published in the last couple
+            of months.
           </p>
 
           <img width="80%" src="https://i.imgur.com/jswCeal.png" />
@@ -104,12 +112,15 @@
             Wtf? Of course, I stopped doing my SEO research (b o r i n g) and
             started trying to figure out
             <del>how to rank for this keyword</del> why the heck people were
-            dogpiling into this weird aimless query.
+            dogpiling into this weird query.
           </p>
 
           <h2 class="blog-heading">A strange game...</h2>
           <p>
-            To understand this phenomenon, we need a bit of background on SEO.
+            And I figured it out! But to fully understand this phenomenon, we
+            need a bit of background on SEO.
+          </p>
+          <p>
             SEO is
             <span class="tooltip"
               >a strange game<span class="tooltiptext"
@@ -121,7 +132,7 @@
             <li>You run a business, and your business has a website.</li>
             <li>
               You want people to find your website when they search things on
-              Google, and buy your stuff.
+              Google, so they buy your stuff.
             </li>
             <li>
               There's an almost infinite number of keywords people are
@@ -138,7 +149,7 @@
               hot keyword, you probably get nothing for your effort.
             </li>
             <li>
-              So you keep writing new content until you get something in the top
+              So you keep trying new content until you get something in the top
               few spots.
             </li>
           </ol>
@@ -165,17 +176,22 @@
             management
           </h2>
           <p>
-            That's exactly what's happening here. There is a
+            That's exactly what's happening here! There is a
             <a href="https://www.netacad.com/courses/iot/introduction-iot"
               >Cisco Introduction to IoT course</a
             >
             that must have gotten pretty popular recently. One of the potential
-            questions on the final exam is about Hadoop, which, as we all know,
-            is
-            <strong
-              >a comprehensive ecosystem of open source software for big data
-              management</strong
-            >.
+            questions on
+            <a
+              href="https://priyadogra.com/cisco-introduction-to-iot-final-exam-answers/"
+              >a sample final exam</a
+            >
+            is about Hadoop, which, as we all know, is
+            <strong>
+              a comprehensive ecosystem of open source software for big data
+              management
+            </strong>
+            !
           </p>
 
           <video controls muted loop autoplay class="iphone-vid" height="400px">
@@ -183,15 +199,36 @@
           </video>
 
           <p>
-            This means that thousands of people started searching for “a
+            This means that thousands of students started searching for “a
             comprehensive ecosystem of open source software for big data
             management” every month as they studied for their final IoT exam.
             And the SEO analytics dashboards noticed.
           </p>
+
           <p>
-            There was probably no content there at first, so it showed up on
-            people's SEO dashboards just like it did on mine: as something data
-            related, high volume, and low competition. Ripe for the plucking!
+            The really interesting thing about this case is that the original
+            source content driving this search interest is
+            <strong>not</strong> publicly available or indexed. This query is
+            copied and pasted verbatim from an exam, which are famously not
+            something you want to be found on Google.
+          </p>
+
+          <p>
+            Most of the time when something new emerges that's worth searching
+            for, there's some party that's already front-run the SEO game. New
+            Apple Vision Pro? Been talked about for months, plus Apple's got a
+            page for it. OpenAI Code Interpreter? There's already 8 million
+            results.
+          </p>
+
+          <img width="60%" src="https://i.imgur.com/dRh0s5l.png" />
+
+          <p>
+            But here, there was a rare SEO vacuum: a very specific high volume
+            query, with almost zero content to match. The SEO dashboard tools
+            see that, think "JACKPOT!", and that's why we have a thousand
+            low-quality posts desperately trying to rank for this strange and
+            confusingly specific keyword. Mystery solved.
           </p>
 
           <h2 class="blog-heading" id="the-problem-with-seo">
@@ -199,19 +236,19 @@
           </h2>
           <p>
             But there's a problem here that exposes the strange, mindless
-            behavior of identifying a keyword in an SEO dashboard and pouncing
-            on it without thinking twice.
+            behavior of finding a keyword in an SEO dashboard and pouncing on it
+            without thinking twice.
           </p>
           <p>
-            That 2 second GIF above actually contains 100% of the information
-            the user searching needs. They just want to know the answer to their
-            Jeopardy-style question, and nothing more. One word, “Hadoop”, does
-            the trick.
+            That 2 second Quizlet GIF above actually contains 100% of the
+            information the user searching needs. They just want to know the
+            answer to their Jeopardy-style question, and nothing more. One word,
+            “Hadoop”, does the trick.
           </p>
           <p>
-            And Google knows this, so it adds a “Question and Answers” block
-            before the first SERP result, probably diverting a tremendous amount
-            of traffic away from that page. Honors for that top page go to Ben
+            Google knows this, so it adds a “Question and Answers” block before
+            the first SERP result, probably diverting a tremendous amount of
+            traffic away from that page. Honors for that top page go to Ben
             Farrell at
             <a
               href="https://datadrivendaily.com/a-comprehensive-ecosystem-of-open-source-software-for-big-data-management/"
@@ -223,11 +260,15 @@
           <img width="80%" src="https://i.imgur.com/jOVHsnR.png" />
 
           <p>
-            The problem with that article is that in order to dominate the SEO
+            But since that article was written purely to dominate the SEO
             rankings and please The Algorithm, it's metastasized from the
             one-word answer “Hadoop” into 1,066 words of jargon. The sentence
             about Hadoop doesn't even appear until word 491, almost halfway
             through the article.
+            <strong
+              >It wasn't written to answer someone's question or satisfy their
+              search intent. It was just written to rank.</strong
+            >
           </p>
           <p>
             And this is <strong>BY FAR</strong> the best article in the entire
@@ -271,12 +312,12 @@
           <h2 class="blog-heading" id="so-what-">So what?</h2>
           <p>
             I sort of doubt that this is driving meaningful traffic to these
-            sites, but it's just fascinating to me to watch an SEO Meme like
-            this develop, and see how fast the programmatic SEO hounds hurl
+            sites, but it's fascinating to me to watch an SEO Meme like this
+            develop, and see how fast the programmatic SEO hounds hurl
             themselves at a fresh target.
           </p>
           <p>
-            This is only going to get worse with LLMs, at least in the interim
+            This is only going to get weirder with LLMs, at least in the interim
             before everyone stops using Google. There's now a ton of tools that
             automatically find low competition keywords and generate hundreds of
             AI blog posts for you in just a few minutes. Here's a guy claiming
@@ -306,11 +347,11 @@
           ></script>
 
           <p>
-            Some of these might work. But lots of them wont, and there'll be
-            thousands of "glitch" keywords just like this one that get caught in
-            a circular AI arms race of unhelpful SEO content. The real problem
-            is just the lack of alignment these articles have with search
-            intent—
+            Some of these might be helpful! But lots of them wont, and there'll
+            be thousands of "glitch" keywords just like this one that get caught
+            in a circular AI arms race of unhelpful SEO content. The real
+            problem is just the lack of alignment these articles have with
+            search intent—
             <strong
               >if you want people to land on your site and remember you
               favorably, you should just answer their question</strong
@@ -320,16 +361,16 @@
             these glitches.
           </p>
           <p>
-            Perhaps only 4chan can save us with their reputation for kindness
-            and straight to the point questions and answers.
+            Perhaps, only 4chan can save us with their reputation for kindness
+            and straight to the point questions and answers...
           </p>
-          <p>
+          <aside>
             PS: secretly, I hope that this post starts ranking for “a
             comprehensive ecosystem of open source software for big data
             management”, which is why I have said it verbatim so many times and
             added a helpful callout at the top for students. To be honest, I'd
             settle for the 19th spot: just above highadviser.com.
-          </p>
+          </aside>
         </div>
       </center>
     </div>
