--- a/index.html
+++ b/index.html
@@ -27,10 +27,51 @@
                 <ul class="pages">
                         <li class="home"><a href="blog.html">blog</a></li>
                         <li class="home"><a href="https://github.com/izzymiller">code</a></li>
-                        <li class="home"><a href="https://www.linkedin.com/in/izzy-miller/">linkedin</a></li>
-                        <li class="home"><a href="mailto:isidoredmiller@gmail.com">contact</a></li>
 
                 </ul>
+        </div>
+        <div class="footer" style="gap: 20px;">
+                <center>
+                <!-- twitter -->
+                <a
+        href="https://twitter.com/isidoremiller?ref_src=twsrc%5Etfw"
+        target="_blank"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="20"
+          height="20"
+          fill="black"
+          class="bi bi-twitter"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"
+          />
+        </svg>
+      </a>
+      <!-- linkedin -->
+      <a href="https://www.linkedin.com/in/izzy-miller/" target="_blank">
+        <svg fill="#000000" height="20" width="20" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 455 455" xml:space="preserve">
+            <g>
+                <path style="fill-rule:evenodd;clip-rule:evenodd;" d="M0,0v455h455V0H0z M141.522,378.002H74.016V174.906h67.506V378.002z M107.769,147.186h-0.446C84.678,147.186,70,131.585,70,112.085c0-19.928,15.107-35.087,38.211-35.087 c23.109,0,37.31,15.159,37.752,35.087C145.963,131.585,131.32,147.186,107.769,147.186z M385,378.002h-67.524V269.345 c0-27.291-9.756-45.92-34.195-45.92c-18.664,0-29.755,12.543-34.641,24.693c-1.776,4.34-2.24,10.373-2.24,16.459v113.426h-67.537 c0,0,0.905-184.043,0-203.096H246.4v28.779c8.973-13.807,24.986-33.547,60.856-33.547c44.437,0,77.744,29.02,77.744,91.398V378.002 z"/>
+            </g>
+        </svg>
+    </a>
+
+      <!-- email -->
+      <a href="mailto:isidoredmiller@gmail.com" target="_blank">
+        <svg fill="#000000" height="20" width="20" version="1.1" id="Icons" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+	 viewBox="0 0 32 32" xml:space="preserve">
+<path d="M30,9.9C30,9.9,30,9.8,30,9.9c0-0.2-0.1-0.3-0.1-0.4c0,0,0,0,0,0c0,0,0,0,0,0c-0.1-0.1-0.1-0.2-0.2-0.3c0,0,0,0,0,0
+	c0,0,0,0,0,0l-13-9c-0.3-0.2-0.8-0.2-1.1,0l-13,9c0,0,0,0,0,0c0,0,0,0,0,0C2.3,9.3,2.2,9.4,2.2,9.4c0,0,0,0,0,0c0,0,0,0,0,0
+	C2.1,9.6,2,9.7,2,9.8c0,0,0,0,0,0.1c0,0,0,0.1,0,0.1v13c0,2.8,2.2,5,5,5h18c2.8,0,5-2.2,5-5V10C30,10,30,9.9,30,9.9z M16,2.2
+	L27.2,10L16,16.8L4.8,10L16,2.2z"/>
+</svg>
+    </a>
+      <br />
+      <br />
+</center>
         </div>
 <div class="footer">currently: </b><font color=f5c0c0><a href="https://hex.tech">⬡ hex</a></font></center>
 </div>
